# genclf

./: MANIFEST.ini  README.md  pyproject.toml  setup.py
genclf/: __init__.py  genclf.py
genclf/models/: gender_logit_model.pkl
tests/: test_genclf.py
