[tool.poetry]
name = "genclf"
version = "0.0.1"
description = "Gender Classifier ML Package for classifying gender using firstname"
authors = ["JCharis <jcharistech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jcharis/genclf"
repository = "https://github.com/Jcharis/genclf"
keywords = ["gender classifier", "jcharistech", "genclf", "machine learning"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.7"
joblib = "^0.14.0"
scikit-learn = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
